<resources xmlns:ns0="http://schemas.android.com/tools">
    <string name="app_name_" translatable="false">#Messages</string>
    <string name="app_name">Messages</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search" translatable="false">
        <font size="17">Search Messages</font>
    </string>
    <string name="languages" translatable="false">
        <font size="17">Search Languages</font>
    </string>
    <string name="searchcon" translatable="false">
        <font size="17">Search Contact</font>
    </string>
    <string name="Banner_archive" translatable="false">ca-app-pub-2033413118114270/9832339165</string>
    <string name="Banner_language" translatable="false">ca-app-pub-2033413118114270/2086212094</string>
    <string name="Banner_home_collabe" translatable="false">ca-app-pub-2033413118114270/8345647462</string>
    <string name="Nativeadvanced_chat" translatable="false">ca-app-pub-2033413118114270/4771584170</string>
    <string name="Nativeadvanced_settings" translatable="false">ca-app-pub-2033413118114270/2452542594</string>
    <string name="app_open_inter" translatable="false">ca-app-pub-2033413118114270/2344709308</string>
    <string name="Appopen_onappopen" translatable="false">ca-app-pub-2033413118114270/8341079937</string>
    <string name="Banner_contactdetails" translatable="false">ca-app-pub-2033413118114270/4896658946</string>
    <string name="app_id" translatable="false">ca-app-pub-2033413118114270~4263569981</string>
    <string name="nativ_id" translatable="false">ca-app-pub-2033413118114270/8702319507</string>
    <string name="Banner_Aftercall" translatable="false">ca-app-pub-2033413118114270/7134686347</string>
    <string name="Native_advanced_Aftercall" translatable="false">ca-app-pub-2033413118114270/8141210900</string>
    <string name="Inter_id" translatable="false">ca-app-pub-2033413118114270/1418725855</string>
    <string name="Open_id" translatable="false">ca-app-pub-2033413118114270/6786602609</string>
    <string name="banner_id" translatable="false">ca-app-pub-2033413118114270/4418663403</string>
    <string name="reward_id" translatable="false">ca-app-pub-2033413118114270/1015401174</string>
    <string name="google_maps_key">AIzaSyCtfkNdYYEP0yl4-_PigOSGas3AcF7mRq8</string>
    <string name="facebook_app_id" translatable="false">681036313413650</string>
    <string name="empty_destination_address">Can\'t send message to an empty number</string>
    <string name="unable_to_save_message">Unable to save message to the telephony database</string>
    <string name="error_service_is_unavailable">Couldn\'t send message, service unavailable</string>
    <string name="error_radio_turned_off" translatable="false">Couldn\'t send message, radio turned off</string>
    <string name="carrier_send_error">Couldn\'t send message, carrier error</string>
    <string name="unknown_error_occurred_sending_message">Couldn\'t send message, error code: %d</string>
    <string name="invalid_short_code">Can\'t reply to short codes like this</string>
    <string name="invalid_short_code_desc">You can only reply to short codes with numbers like \"503501\" but not to codes containing letters and numbers like \"AB-CD0\".</string>
    <string name="attachment_sized_exceeds_max_limit">Attachment size exceeds max MMS limit</string>
    <string name="sim_card_not_available">SIM card not available</string>
    <string name="channel_received_sms">Received SMS</string>
    <string name="new_message">New message</string>
    <string name="mark_as_read_message">Mark as Read</string>
    <string name="mark_as_unread">Mark as Unread</string>
    <string name="me">Me</string>
    <string name="reply_message">Reply</string>
    <string name="message_not_sent_short">Message not sent</string>
    <string name="export_messages">Export messages</string>
    <string name="empty_name">Please enter a name</string>
    <string name="name_taken">A file or folder with that name already exists</string>
    <string name="no_option_selected">You have to select at least one item</string>
    <string name="unknown_error_occurred">An unknown error occurred</string>
    <string name="allow_notifications_incoming_messages">You must allow the app displaying notifications, else it cannot show incoming messages.</string>
    <string name="new_conversation_ms">New conversation</string>
    <string name="new_search_ms">Search conversation</string>
    <string name="add_contact_or_number">Add Contact or Number…</string>
    <string name="suggestions">Suggestions</string>
    <string name="export_sms">Export SMS</string>
    <string name="export_mms">Export MMS</string>
    <string name="messages">Messages</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="invalid_name">The name contains invalid characters</string>
    <string name="system_service_disabled">System service for selecting files and folders is unavailable</string>
    <string name="confirm_storage_access_android_text">confirm_storage_access_android_text</string>
    <string name="could_not_create_file">could_not_create_file</string>
    <string name="exporting">Exporting…</string>
    <string name="exporting_successful">Exporting successful</string>
    <string name="exporting_failed">Exporting failed</string>
    <string name="wrong_folder_selected">wrong_folder_selected</string>
    <string name="import_messages">Import messages</string>
    <string name="import_settings">Import settings</string>
    <string name="importing">Importing…</string>
    <string name="importing_failed">Importing failed</string>
    <string name="importing_some_entries_failed">Importing some entries failed</string>
    <string name="importing_successful">Importing successful</string>
    <string name="no_items_found">No items found.</string>
    <string name="invalid_file_format">Invalid file format</string>
    <string name="no_app_found">No valid app found</string>
    <string name="block_confirmation">Are you sure you want to block \"%s\"?</string>
    <string name="schedule_send_warning">Keep the phone on and make sure there is nothing killing the app while in background.</string>
    <string name="schedule_message">Schedule message</string>
    <string name="must_pick_time_in_the_future">You must pick a time in the future</string>
    <string name="share">Share</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="no_contacts_permission">Contacts permission is required</string>
    <string name="no_access_to_contacts">The app could not access your contacts</string>
    <string name="Privacy_and_security">Privacy and security</string>
    <string name="Feedback">Feedback</string>
    <string name="About">About</string>
    <string name="Notifications_and_Sound">Notifications and sound</string>
    <string name="Conversation_Setting">Conversation setting</string>
    <string name="Driving_Mode">Driving mode</string>
    <string name="Language">Language</string>
    <string name="Language_nre">App language</string>
    <string name="Two_Conversation">2 Conversation</string>
    <string name="Settings">Settings</string>
    <string name="Conversation">Conversation</string>
    <string name="jigar">jigar</string>
    <string name="Security_Setting">Security Setting</string>
    <string name="Who_Can_see_your_Content">Who Can see your Content</string>
    <string name="Auto_otp_delete">Delete OTP automatically after 24 hr</string>
    <string name="Blocked_User">Blocked user</string>
    <string name="Privacy_chat">Private chat</string>
    <string name="Archived">Archived</string>
    <string name="No_archive_found">No archive any conversation</string>
    <string name="No_privat_found">No private chat available</string>
    <string name="Invite_a_Friend">Invite a friend</string>
    <string name="Let_Messag">Let’s switch to message :</string>
    <string name="Notification_and_sound">Notification and sound</string>
    <string name="Allow_Notifications">Allow Notifications</string>
    <string name="Notifications_Previews">Notifications Previews</string>
    <string name="Show_name_and_message">Show name and message</string>
    <string name="Show_name">Show name</string>
    <string name="Hide_contents">Hide contents</string>
    <string name="Notification_previews">Notification previews</string>
    <string name="Driving_Mode_Auto">Driving Mode Auto - Reply</string>
    <string name="Driving_Mode_Auto_new">Auto Response</string>
    <string name="Edit_Auto_new">Reply Message</string>
    <string name="Edit_Auto">Edit Auto - Reply Message</string>
    <string name="Please_Select_Another_Message">Please Select Another Message</string>
    <string name="Please_Enter_Message">Please_Enter_Message</string>
    <string name="Edit_Driving_Mode_Auto_Reply">Edit Driving Mode Auto Reply</string>
    <string name="Save">Save</string>
    <string name="Default_message_1">Good Morning, Dear How\nAre You ?</string>
    <string name="Default_message_2">Very Good Morning I’m Fine !\nyou ?</string>
    <string name="Font">Font</string>
    <string name="Small">Small</string>
    <string name="Normal">Normal</string>
    <string name="Large">Large</string>
    <string name="Extra_Large">Extra Large</string>
    <string name="Message_Corner">Message Corner</string>
    <string name="Conversation_List_View">Conversation List View</string>
    <string name="Two_Lines">Two Lines</string>
    <string name="Three_Lines">Three Lines</string>
    <string name="Conversation_Swipe_Motion">Conversation swipe motion</string>
    <string name="Swipe_Right">Swipe Right</string>
    <string name="Swipe_Left">Swipe Left</string>
    <string name="Other_Setting">Other Setting</string>
    <string name="Mark_all_as_read">Mark all as read</string>
    <string name="Share_app">Share app</string>
    <string name="Import_messages">Import messages</string>
    <string name="Backup_Restore">Backup &amp; Restore</string>
    <string name="Select_all_message">Select all message</string>
    <string name="Block_List">Block List</string>
    <string name="Archive">Archive</string>
    <string name="Message">Message</string>
    <string name="Message_Text_Size">Message Text Size</string>
    <string name="Add_Contact">Add Contact</string>
    <string name="leku_search_hint">Search</string>
    <string name="View_Profile">View Profile</string>
    <string name="translate_new_ui">Translate language</string>
    <string name="Custom_Wallpaper">Custom Wallpaper</string>
    <string name="Enter_Email_Address">Enter email address</string>
    <string name="game_over">GAME OVER</string>
    <string name="_00">00</string>
    <string name="high_score">High Score : 00</string>
    <string name="restart">restart</string>
    <string name="catch_the_ball">Catch the Ball</string>
    <string name="play">PLAY</string>
    <string name="_10_point">10 Point</string>
    <string name="_30_point">30 Point</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="submit">Submit</string>
    <string name="filter">Filter</string>
    <string name="theme">Theme</string>
    <string name="review_form_name_label">Name</string>
    <string name="review_form_name_hint">Enter name</string>
    <string name="review_form_email_label">Email</string>
    <string name="permission_required_allow_button" translatable="false">Allow Permission</string>
    <string name="permission_required_messages_title">Permission required to use the Messages app.</string>
    <string name="permission_required_open_settings">Open settings, then</string>
    <string name="permission_required_step1">1. Tap Permissions</string>
    <string name="permission_required_step2_phone">2. Find %1$s</string>
    <string name="permission_required_step3">3. Choose %1$s</string>
</resources>