<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_corner_top"
    android:orientation="vertical"
    android:paddingStart="@dimen/_20sdp"
    android:paddingTop="@dimen/_16sdp"
    android:paddingEnd="@dimen/_20sdp"
    android:paddingBottom="@dimen/_20sdp">

     <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/permission_required_messages_title"
        android:textColor="@color/permission_bs_title_light"
        android:textSize="@dimen/_14ssp" />

     <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_semibold"
        android:singleLine="true"
        android:text="@string/permission_required_open_settings"
        android:textColor="@color/permission_bs_text_light"
        android:textSize="@dimen/_13ssp" />

     <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtStep1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:singleLine="true"
        android:text="@string/permission_required_step1"
        android:textColor="@color/permission_bs_text_light"
        android:textSize="@dimen/_13ssp" />

     <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtStep2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/poppins_regular"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/permission_required_step2_phone"
        android:textColor="@color/permission_bs_text_light"
        android:textSize="@dimen/_13ssp" />

     <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtStep3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:fontFamily="@font/poppins_regular"
        android:singleLine="true"
        android:text="@string/permission_required_step3"
        android:textColor="@color/permission_bs_text_light"
        android:textSize="@dimen/_13ssp" />

     <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAllow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:includeFontPadding="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="48dp"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/permission_required_allow_button"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        android:textAllCaps="true"
        app:backgroundTint="@color/cta_don"
        app:cornerRadius="@dimen/_12sdp" />

</LinearLayout>
