<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D1A36B"


        tools:context=".Waitinggame.ui.resultActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


             <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_over"
                android:textSize="40sp"
                android:textStyle="bold" />

             <com.google.android.material.textview.MaterialTextView
                android:id="@+id/scoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00"
                android:textSize="80sp" />

             <com.google.android.material.textview.MaterialTextView
                android:id="@+id/highScoreLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/high_score"
                android:textSize="20sp"
                android:layout_marginTop="80dp"/>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/restart"
                android:layout_marginTop="50dp"
                android:src="@drawable/retry"
                android:textAllCaps="false"
                android:onClick="tryAgain"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>