<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:background="#D1A36B"
        tools:context=".Waitinggame.ui.GameActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

             <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/catch_the_ball"
                android:fontFamily="sans-serif-black"
                android:textSize="45sp" />

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp">

                <TableRow
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/pink"/>

                     <com.google.android.material.textview.MaterialTextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_30_point"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"/>

                </TableRow>

                <TableRow
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/orange"/>

                     <com.google.android.material.textview.MaterialTextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/_10_point"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"/>

                </TableRow>

                <TableRow
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/black"/>

                     <com.google.android.material.textview.MaterialTextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:text="@string/game_over"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"/>
                </TableRow>

            </TableLayout>

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/start"
                android:contentDescription="@string/play"
                android:layout_marginTop="60dp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="startGame"/>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>